update opentype.js to 1.3.4, change nashorn package to org.openjdk.nashorn
update opentype.js to 1.3.4, change nashorn package to org.openjdk.nashorn